navbar and main window aligning problem solved, section basic styling

--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,13 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    /* border: black 1px solid; */
 }
 
 html, body {
-    background: radial-gradient(ellipse at top, #5489c2, #8c3eb323),
-    radial-gradient(ellipse at bottom, #bf1c63ba, #28b81b);
+    background: radial-gradient(ellipse at top, #5489c2, #8c3eb33f),
+    linear-gradient(140deg, rgb(108, 108, 108), transparent 70% 100%),
+    radial-gradient(ellipse at bottom, #bf1c63a3, #28b81b);
     width: 100vw;
     height: 100vh;
 }
@@ -30,30 +32,41 @@ ul {
 /* ------------- Header ------------- */
 
 header {
+    max-width: 1100px;
+    margin:auto;
     display: flex;
     align-items: center;
-    overflow: hidden;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+header ul {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    /* overflow: hidden; */
 }
 
 .logo {
     display: flex;
     align-items: center;
+    !!!
 }
 
 h1 {
-    color: #c1c1c1;
+    font-family: 'Big Shoulders Display', cursive;
+    color: #e3e3e3;
     padding: 3vh 0;
 }
 
 .fa-sun {
-    color: #c1c1c1;
+    color: #e3e3e3;
     width:fit-content;
     font-size: 5rem;
     padding: 3vh 3vw;
 }
 
 header a.navbar {
-    height: 100%;
     font-size: 1.3rem;
     background: rgba(255,255,255,0.05) radial-gradient(transparent 10% 50%, rgba(4, 147, 4, 0.166)  100%);
 }
@@ -64,7 +77,15 @@ a.navbar:hover {
     radial-gradient(transparent 10% 50%, rgba(4, 147, 4, 0.166)  100%);
 }
 
+nav ul li {
+    /* width: 100%; */
+    /* height: 20px; */
+}
+
 nav ul li a {
+    font-family: 'Big Shoulders Display', cursive;
+    font-weight: 300;
+    font-size: 20px;
     border-right: dotted 1px rgb(116, 0, 99);
 }
 
@@ -73,7 +94,9 @@ nav ul li:last-child a {
 }
 
 main {
-    height: 300px;
-    width: 300px;
-
+    width: 500px;
+    height: 200px;
+    background: rgba(255,255,255,0.15)
+    radial-gradient(ellipse at center, #ffffff9c, transparent);
+    border-radius: 5px;
 }
